# GVMT

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts  开发计划.md
.claude/: CLAUDE.md  phase2-plan.md  settings.local.json
docs/: phase-1-acceptance.md
docs/superpowers/specs/: 2026-05-21-commit-hooks-and-quality-scripts-design.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: command_exec.rs  commands.rs  db.rs  file_browser.rs  gh.rs  git.rs  ignore.rs  lib.rs  main.rs  models.rs  quality.rs  startup.rs  svn.rs  utils.rs  windows.rs
src/components/dialogs/: CommitDialog.tsx  DeleteConfirmDialog.tsx  ForceUpdateConfirmDialog.tsx  IgnoreDialog.tsx  SettingsDialog.tsx
src/components/layout/: ActivityRail.tsx  CommandBar.tsx
src/components/panels/: ChangesPane.tsx  ExplorerPane.tsx  FileBrowserPanel.tsx  RepositorySummaryPanel.tsx  ReviewPane.tsx  StatusPanel.tsx  ThemePane.tsx
src/components/shared/: ChangeBadge.tsx  CodeBlock.tsx  ContextMenu.tsx  EmptyState.tsx  (+7 more)
src/hooks/: useCardOrder.ts  useChangeTree.ts  useCommit.ts  useContextMenu.ts  useFileTree.ts  useIgnoreRules.ts  useKeyboardShortcuts.ts  useOperationHistory.ts  useQualityChecks.ts  useRepositories.ts  useRepositoryStatus.ts  useSettings.ts  useToast.ts  useUpdateProgress.ts  useVisibleSections.ts
src/lib/: WorkspaceContext.tsx  api.ts  constants.ts  i18n.ts  theme.tsx  utils.ts
tests/: app.spec.ts  commit-dialog.spec.ts
(+19 files in other folders)
