[package]
name = "gvmt"
version = "0.1.0"
description = "General Version Management Tool"
authors = ["FlowerDrunk"]
edition = "2021"

[lib]
name = "gvmt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

